<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/mainMenuFragment"
    >
    <!-- TODO Find out what the label attribute is -->
    <fragment
        android:id="@+id/mainMenuFragment"
        android:name="eywa.projectcodex.components.mainMenu.MainMenuFragment"
        android:label="fragment_main_menu"
        tools:layout="@layout/fragment_main_menu"
        >
        <action
            android:id="@+id/actionMainMenuFragmentToNewRoundFragment"
            app:destination="@id/newRoundFragment"
            />
        <action
            android:id="@+id/actionMainMenuFragmentToViewRoundsFragment"
            app:destination="@id/viewRoundsFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/viewRoundsFragment"
        android:name="eywa.projectcodex.components.viewRounds.ViewRoundsFragment"
        android:label="fragment_view_rounds"
        tools:layout="@layout/fragment_view_rounds"
        >
        <action
            android:id="@+id/actionViewRoundsFragmentToScorePadFragment"
            app:destination="@id/scorePadFragment"
            />
        <action
            android:id="@+id/actionViewRoundsFragmentToInputEndFragment"
            app:destination="@id/inputEndFragment"
            />
        <action
            android:id="@+id/action_viewRoundsFragment_to_newRoundFragment"
            app:destination="@id/newRoundFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/newRoundFragment"
        android:name="eywa.projectcodex.components.newRound.NewRoundFragment"
        android:label="fragment_new_round"
        tools:layout="@layout/fragment_new_round"
        >
        <action
            android:id="@+id/actionNewRoundFragmentToInputEndFragment"
            app:destination="@id/inputEndFragment"
            />
        <argument
            android:name="backStackBehaviour"
            app:argType="eywa.projectcodex.components.BackStackBehaviour"
            android:defaultValue="NONE"
            />
        <argument
            android:name="archerRoundId"
            app:argType="integer"
            android:defaultValue="-1"
            />
    </fragment>
    <fragment
        android:id="@+id/inputEndFragment"
        android:name="eywa.projectcodex.components.archerRoundScore.inputEnd.InputEndFragment"
        android:label="fragment_input_end"
        tools:layout="@layout/fragment_input_end"
        >
        <action
            android:id="@+id/actionInputEndFragmentToScorePadFragment"
            app:destination="@id/scorePadFragment"
            />
        <action
            android:id="@+id/actionInputEndFragmentToMainMenuFragment"
            app:destination="@id/mainMenuFragment"
            />
        <argument
            android:name="archerRoundId"
            app:argType="integer"
            />
        <argument
            android:name="showArcherRoundNavBar"
            app:argType="boolean"
            android:defaultValue="true"
            />
        <argument
            android:name="backStackBehaviour"
            app:argType="eywa.projectcodex.components.BackStackBehaviour"
            android:defaultValue="SINGLE"
            />
    </fragment>
    <fragment
        android:id="@+id/scorePadFragment"
        android:name="eywa.projectcodex.components.archerRoundScore.scorePad.ScorePadFragment"
        android:label="activity_view_scores"
        tools:layout="@layout/fragment_score_pad"
        >
        <argument
            android:name="archerRoundId"
            app:argType="integer"
            />
        <action
            android:id="@+id/actionScorePadFragmentToEditEndFragment"
            app:destination="@id/editEndFragment"
            />
        <action
            android:id="@+id/actionScorePadFragmentToInsertEndFragment"
            app:destination="@id/insertEndFragment"
            />
        <argument
            android:name="showArcherRoundNavBar"
            app:argType="boolean"
            android:defaultValue="true"
            />
        <argument
            android:name="backStackBehaviour"
            app:argType="eywa.projectcodex.components.BackStackBehaviour"
            android:defaultValue="SINGLE"
            />
    </fragment>
    <fragment
        android:id="@+id/editEndFragment"
        android:name="eywa.projectcodex.components.archerRoundScore.inputEnd.EditEndFragment"
        android:label="EditEndFragment"
        tools:layout="@layout/fragment_edit_end"
        >
        <argument
            android:name="endSize"
            app:argType="integer"
            />
        <argument
            android:name="archerRoundId"
            app:argType="integer"
            />
        <argument
            android:name="firstArrowId"
            app:argType="integer"
            />
        <argument
            android:name="backStackBehaviour"
            app:argType="eywa.projectcodex.components.BackStackBehaviour"
            android:defaultValue="NONE"
            />
        <action
            android:id="@+id/actionEditEndFragmentToScorePadFragment"
            app:destination="@id/scorePadFragment"
            app:popUpTo="@id/scorePadFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/insertEndFragment"
        android:name="eywa.projectcodex.components.archerRoundScore.inputEnd.InsertEndFragment"
        android:label="fragment_insert_end"
        tools:layout="@layout/fragment_insert_end"
        >
        <argument
            android:name="endSize"
            app:argType="integer"
            />
        <argument
            android:name="archerRoundId"
            app:argType="integer"
            />
        <argument
            android:name="firstArrowId"
            app:argType="integer"
            />
        <argument
            android:name="backStackBehaviour"
            app:argType="eywa.projectcodex.components.BackStackBehaviour"
            android:defaultValue="NONE"
            />
        <action
            android:id="@+id/actionInsertEndFragmentToScorePadFragment"
            app:destination="@id/scorePadFragment"
            app:popUpTo="@id/scorePadFragment"
            app:popUpToInclusive="true"
            />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="eywa.projectcodex.components.about.AboutFragment"
        android:label="fragment_about"
        tools:layout="@layout/fragment_about"
        />
    <fragment
        android:id="@+id/archerRoundStatsFragment"
        android:name="eywa.projectcodex.components.archerRoundScore.archerRoundStats.ArcherRoundStatsFragment"
        android:label="ArcherRoundStatsFragment"
        tools:layout="@layout/fragment_archer_round_stats"
        >
        <argument
            android:name="archerRoundId"
            app:argType="integer"
            />
        <argument
            android:name="showArcherRoundNavBar"
            app:argType="boolean"
            android:defaultValue="true"
            />
        <argument
            android:name="backStackBehaviour"
            app:argType="eywa.projectcodex.components.BackStackBehaviour"
            android:defaultValue="SINGLE"
            />
    </fragment>
</navigation>