...
    <string name="table_golds_nines_header">G</string>
    <string name="table_golds_tens_header">10</string>
    <string name="table_golds_xs_header">X</string>
    <string name="err_table_view__no_data">Table is empty</string>

    <!-- General -->
    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="general_cancelling">Cancelling</string>
    <string name="general_cancelled">Cancelled</string>
    <string name="button_complete">Complete</string>
    <string name="button_continue">Continue</string>
    <string name="button_next">Next</string>
...
